[gd_scene load_steps=44 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://asset/sprite/character/Character Update 0.1/Idle/Idle-Sheet.png" type="Texture" id=2]
[ext_resource path="res://asset/sprite/character/Character Update 0.1/Run/Run-Sheet.png" type="Texture" id=3]
[ext_resource path="res://asset/sprite/character/Character Update 0.1/Jumlp-All/Jump-All-Sheet.png" type="Texture" id=4]
[ext_resource path="res://asset/sprite/character/Character Update 0.1/Attack-01/Attack-01-Sheet.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 576, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 672, 0, 96, 80 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "idle",
"speed": 9.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "attack",
"speed": 13.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "jump",
"speed": 13.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.5, 1.5 )

[sub_resource type="CapsuleShape2D" id=37]
radius = 7.0
height = 30.0

[node name="player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 145, 106 )
collision_mask = 14
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="spr" type="AnimatedSprite" parent="."]
frames = SubResource( 73 )
animation = "jump"

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 22.5 )
shape = SubResource( 6 )

[node name="j_tim" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="hurt_box" type="Area2D" parent="."]
collision_mask = 2

[node name="col" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource( 37 )

[node name="player_sword" type="Area2D" parent="."]
collision_mask = 2

[node name="col" type="CollisionPolygon2D" parent="player_sword"]
polygon = PoolVector2Array( 17, -25, 21, -5, 10, 6, -3, 8, 11, 12, 38, 2, 46, -37 )

[connection signal="timeout" from="j_tim" to="." method="_on_j_tim_timeout"]
